fix: contact box content now aligns by changing marins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,7 @@ body {
     padding: 10px;
     border-radius: 10px;
     border-color: white;
-    max-width: 200px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 a {
